# Flask

./: .gitignore  Dockerfile  docker-compose.yaml  requirements.txt  wsgi.py
Lesson_1/: pyproject.toml  wsgi.py
Lesson_1/blog/: app.py
Lesson_1/blog/teamplates/: base.html
Lesson_1/blog/teamplates/articles/: list.html
Lesson_1/blog/teamplates/users/: list.html
Lesson_1/blog/views/: articles.py  users.py
blog/: app.py  models.py
blog/auth/: views.py
blog/report/: views.py
blog/templates/: base.html  navbar.html
blog/templates/auth/: login.html
blog/templates/reports/: list.html
blog/templates/users/: list.html  profile.html
blog/user/: views.py
instance/: db.sqlite
migrations/versions/: fdfeea41542b_create_user_model.py
