[tool.poetry]
name = "lesson_1"
version = "0.1.0"
description = ""
authors = ["3D-89Rus <kolesnik.dm88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
